Modified readme and added setup instructions